<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    app:cardElevation="3dp"
    app:cardCornerRadius="5dp"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:paddingBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="10dp"
                android:src="@drawable/about"
                android:layout_width="220dp"
                android:layout_height="120dp" />

            <TextView
                android:id="@+id/about"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:textColor="#484848"
                android:text="@string/dtext2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:textSize="13sp"
                android:includeFontPadding="false"
                android:layout_marginTop="30dp"
                android:textColor="#939393"
                android:text="@string/atext" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:textSize="13sp"
                android:includeFontPadding="false"
                android:layout_marginTop="2dp"
                android:textColor="#939393"
                android:text="@string/atext1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:textSize="13sp"
                android:includeFontPadding="false"
                android:layout_marginTop="2dp"
                android:textColor="#939393"
                android:text="@string/atext2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:textSize="13sp"
                android:includeFontPadding="false"
                android:layout_marginTop="15dp"
                android:textColor="#939393"
                android:text="@string/atext3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:textSize="13sp"
                android:includeFontPadding="false"
                android:layout_marginTop="2dp"
                android:textColor="#939393"
                android:text="@string/atext4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:textSize="13sp"
                android:includeFontPadding="false"
                android:layout_marginTop="2dp"
                android:textColor="#939393"
                android:text="@string/atext5" />


            <Button
                android:id="@+id/back"
                android:textSize="18sp"
                android:text="@string/atext6"
                android:textAllCaps="false"
                android:includeFontPadding="false"
                android:textColor="#fff"
                android:background="@drawable/gradd2"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginTop="35dp"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />


        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>