<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/itemslayout"
        android:layout_width="250dp"
        android:background="#fff"
        android:clickable="true"
        android:layout_height="match_parent"
        android:layout_gravity="left|start">


        <RelativeLayout
            android:id="@+id/header"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="160dp">



            <ImageView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="25dp"
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:src="@drawable/logo" />


            <RelativeLayout
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="27dp"/>


            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:layout_marginLeft="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/drname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/poppins"
                    android:text="@string/drtext1"
                    android:textColor="#fff"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_marginTop="1dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/flatno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_light"
                        android:textSize="13sp"
                        android:textColor="#fff"/>

                    <TextView
                        android:id="@+id/apartment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins"
                        android:textSize="13sp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/drtext3"
                        android:textColor="#fff"/>

                </LinearLayout>

            </LinearLayout>



        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_below="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/help"
                android:text="@string/dtext1"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="20dp"
                android:drawablePadding="30dp"
                android:fontFamily="@font/poppins"
                android:drawableLeft="@drawable/ic_headset"
                android:textColor="#221f20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/about"
                android:text="@string/dtext2"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="20dp"
                android:drawablePadding="30dp"
                android:fontFamily="@font/poppins"
                android:drawableLeft="@drawable/ic_information"
                android:textColor="#221f20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/logoutss"
                android:text="@string/dtext3"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="20dp"
                android:drawablePadding="30dp"
                android:fontFamily="@font/poppins"
                android:drawableLeft="@drawable/ic_logouts"
                android:textColor="#221f20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/bottom"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:textColor="#7f6b64"
                android:text="@string/drtext7"
                android:fontFamily="@font/poppins_semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/propcode"
                android:textColor="#a54686"
                android:text="AXS0001"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="70dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:paddingTop="5dp"
                android:includeFontPadding="false"
                android:text="@string/drtext4"
                android:textColor="#fff"
                android:textSize="11sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/poppins"
                android:textSize="11sp"
                android:includeFontPadding="false"
                android:layout_marginTop="5dp"
                android:text="@string/drtext5"
                android:textColor="#fff"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:fontFamily="@font/poppins"
                android:textSize="11sp"
                android:text="@string/drtext6"
                android:textColor="#fff"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>
